welcome.lessons.welcome.array.array123.Array123.scala.error
array123:10: error: ')' expected but ';' found.
    else (un = false; deux=false)  
                    ^array123:10: error: ';' expected but ')' found.
    else (un = false; deux=false)  
                                ^