welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var un = false
  var deux = false
  var trois = false
  for (i <- 0 to nums.length -1){
    if(!un && nums(i)==1){un=true}
    if(un && nums(i) == 2){deux=true}
    else {un == false}
    if(un && deux && nums(i)==3){trois=true}
    else (un = false; deux=false)  
    
  }
  return trois
}